--- a/events.html
+++ b/events.html
@@ -120,7 +120,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- single -->
     <div class="single about">
         <div class="container">
-            <h3 class="w3ls-title">School Events</h3>
+            <h3 class="w3ls-title">Special Events</h3>
             <div class="col-md-12 w3ls_single_left">
                 <div class="w3ls_single_left_grid">
                     <div class="clearfix"> </div>
@@ -129,7 +129,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <img src="images/Events3.jpg" alt=" " class="center" />
                     <p>
                         <div class="center">
-                            <h3>School Events
+                            <h3>Special Events
                             </h3>
                             <br>
                             <span>Here at JCS we value the community spirit brought by our families and there is no better opportunity to witness this than at our school special events. Our calendar includes many different special events throughout the year: Athletics and Swimming Carnivals, Book Week, Indonesia Week, Morning at the Museum and Indonesia Week. JCS events are fun family events where all members of our community are invited to attend and be involved.
