--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <!--							<li><a href="about.html">Curriculum</a></li> -->
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">Curriculum</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="icons.html">Our Curriculum</a></li>
+                                        <li><a href="curriculum.html">Our Curriculum</a></li>
                                         <li><a href="eyfs.html">EYFS</a></li>
                                         <li><a href="primary.html">Primary</a></li>
                                         <li><a href="secondary.html">Secondary</a></li>
