Fixed all headers

--- a/eyfs.html
+++ b/eyfs.html
@@ -65,43 +65,44 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span data-letters="Pages">About</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="welcome.html">Welcome</a></li>
-                                        <li><a href="codes.html">Vision and Mission</a></li>
-                                        <li><a href="codes.html">Governance</a></li>
-                                        <li><a href="codes.html">PTA</a></li>
+                                        <li><a href="vision.html">Vision and Mission</a></li>
+                                        <li><a href="governance.html">Governance</a></li>
+                                        <li><a href="pta.html">PTA</a></li>
                                         <li><a href="enviromental_mindfulness.html">Eco Awareness</a></li>
-                                        <li><a href="codes.html">Recruitment</a></li>
+                                        <li><a href="recruitment.html">Recruitment</a></li>
                                     </ul>
                                 </li>
                                 <!--							<li><a href="about.html">Curriculum</a></li> -->
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">Curriculum</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="icons.html">Our Curriculum</a></li>
-                                        <li><a href="codes.html">EYFS</a></li>
-                                        <li><a href="codes.html">Primary</a></li>
-                                        <li><a href="codes.html">Secondary</a></li>
-                                        <li><a href="codes.html">Bahasa Indonesia</a></li>
-                                        <li><a href="codes.html">Pastoral Care</a></li>
+                                        <li><a href="curriculum.html">Our Curriculum</a></li>
+                                        <li><a href="eyfs.html">EYFS</a></li>
+                                        <li><a href="primary.html">Primary</a></li>
+                                        <li><a href="secondary.html">Secondary</a></li>
+                                        <li><a href="bahasaIndonesia.html">Bahasa Indonesia</a></li>
+                                        <li><a href="pastoral.html">Pastoral Care</a></li>
                                     </ul>
                                 </li>
 
                                 <!--                            <li><a href="gallery.html">School Life</a></li>-->
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">School Life</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="icons.html">Calendar</a></li>
-                                        <li><a href="codes.html">Times of the Day</a></li>
-                                        <li><a href="codes.html">Lunches & Snackes</a></li>
-                                        <li><a href="codes.html">House System</a></li>
-                                        <li><a href="codes.html">Merits and Dojos</a></li>
-                                        <li><a href="codes.html">After School Activities</a></li>
-                                        <li><a href="codes.html">Special Events</a></li>
-                                        <li><a href="codes.html">Uniform</a></li>
+                                        <li><a href="calendar.html">Calendar</a></li>
+                                        <li><a href="times.html">Times of the Day</a></li>
+                                        <li><a href="lunches.html">Lunches & Snack</a></li>
+                                        <li><a href="houses.html">House System</a></li>
+                                        <li><a href="merits.html">Merits and Dojos</a></li>
+                                        <li><a href="asa.html">After School Activities</a></li>
+                                        <li><a href="events.html">Special Events</a></li>
+                                        <li><a href="uniform.html">Uniform</a></li>
                                     </ul>
                                 </li>
 
 
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span data-letters="Pages">Admissions</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="icons.html">Admissions</a></li>
+                                        <li><a href="admissions.html">Admissions Procedures</a></li>
+                                        <li><a href="tuition.html">Tuiton Fees</a></li>
                                     </ul>
                                 </li>
 
@@ -125,43 +126,44 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="w3ls_single_left_grid">
                     <div class="clearfix"> </div>
                 </div>
-                <div class="w3ls_single_left_grid1">
+                <div class="center">
                     <img src="images/eyfs_2.jpg" alt=" " class="img-responsive" />
-                    <p><span><strong>EYFS: Early Years Foundation Stage (3-5 years of age) </strong></span>
-                        <span>The EYFS curriculum is responsible for a child’s development from birth until they are 5 years old.  Here at JCS our EYFS curriculum begins at 3 years old and continues through to 5 years old:
+                    <br>
+                    <span><strong>EYFS: Early Years Foundation Stage (3-5 years of age) </strong></span><br><br>
+                    <span>The EYFS curriculum is responsible for a child’s development from birth until they are 5 years old.  Here at JCS our EYFS curriculum begins at 3 years old and continues through to 5 years old:
                         </span>
-                        <span>
+                    <span>
                         <ul>
                             <li>Pre-school:   3 - 4 years old</li>    
                             <li>Reception:    4 - 5 years old</li>
                         </ul>
                         </span>
-                        <br>
-                        <span>At JCS children are provided with rewarding and enjoyable experiences in which they explore, investigate, discover and create, thus securing the foundations for their future learning. At times these activities are directed by teachers and carefully planned, though there will be many opportunities for the children to follow their interests, plan, and create their own activities with teachers observing, encouraging and extending their play. Activities take place each day both indoors and outdoors, using different areas and resources in order to provide a wide range of learning experiences.  </span>
-                        <br>
-                        <br>
-                        <span>There are 7 main areas of learning and development of the EYFS:</span>
-                        <br>
-                        <br>
-                        <img src="images/table.png" alt=" " class="img-responsive_1" width="800px" height="400px" />
-                        <br>
-                        <br>
-                        <span>Whilst the child is learning, our EYFS staff will be observing and supporting children, considering 3 Characteristics of Learning as they work with the children.</span>
-                        <br>
+                    <br>
+                    <span>At JCS children are provided with rewarding and enjoyable experiences in which they explore, investigate, discover and create, thus securing the foundations for their future learning. At times these activities are directed by teachers and carefully planned, though there will be many opportunities for the children to follow their interests, plan, and create their own activities with teachers observing, encouraging and extending their play. Activities take place each day both indoors and outdoors, using different areas and resources in order to provide a wide range of learning experiences.  </span>
+                    <br>
+                    <br>
+                    <span>There are 7 main areas of learning and development of the EYFS:</span>
+                    <br>
+                    <br>
+                    <img src="images/table.png" alt=" " class="center" />
+                    <br>
+                    <br>
+                    <span>Whilst the child is learning, our EYFS staff will be observing and supporting children, considering 3 Characteristics of Learning as they work with the children.</span>
+                    <br>
 
-                        <ul>
-                            <li>Playing and Exploring - engagement</li>
-                            <li>Active Learning - motivation</li>
-                            <li>Creative Learning - critical thinking</li>
-                        </ul>
-                        <br>
-                        <img src="images/eyfs_1.jpg" alt=" " class="img-responsive" />
-                        <br>
-                        <span>At JCS the EYFS curriculum is followed throughout Pre-school and Reception.  It is intended that the programme will create independent, motivated and engaged learners who will have a strong, solid foundation on which to build from Year 1 upward.</span>
-                        <br><br>
-                        <span>You can access the EYFS curriculum (from 0-5 years old) official document via this link: <a href='http://www.foundationyears.org.uk/' >EYFS Curriculum</a> </span>
+                    <ul>
+                        <li>Playing and Exploring - engagement</li>
+                        <li>Active Learning - motivation</li>
+                        <li>Creative Learning - critical thinking</li>
+                    </ul>
+                    <br>
+                    <img src="images/eyfs_1.jpg" alt=" " class="img-responsive" />
+                    <br>
+                    <span>At JCS the EYFS curriculum is followed throughout Pre-school and Reception.  It is intended that the programme will create independent, motivated and engaged learners who will have a strong, solid foundation on which to build from Year 1 upward.</span>
+                    <br><br>
+                    <span>You can access the EYFS curriculum (from 0-5 years old) official document via this link: <a href='http://www.foundationyears.org.uk/' >EYFS Curriculum</a> </span>
 
-                    </p>
+
                     <div class="clearfix"> </div>
                 </div>
             </div>
@@ -177,7 +179,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="footer-agileinfo">
                 <div class="col-md-10 col-sm-6 footer-grid">
                     <h3>Location</h3>
-                    <p>Jl Watagude, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
+                    <p>Jl Watugede, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
                 </div>
                 <!--
 				<div class="col-md-5 col-sm-6 footer-grid footer-tags">
@@ -190,7 +192,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-md-2 col-sm-6 footer-grid w3social">
                     <h3>Media</h3>
                     <ul>
-                        <li><a href="#"><i class="fa fa-facebook"></i>Facebook</a></li>
+                        <li><a href="https://www.facebook.com/Jogjakarta-Community-School-395131763855494"><i class="fa fa-facebook"></i>Facebook</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"> </div>
