--- a/welcome.html
+++ b/welcome.html
@@ -75,7 +75,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <!--							<li><a href="about.html">Curriculum</a></li> -->
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">Curriculum</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="icons.html">Our Curriculum</a></li>
+                                        <li><a href="curriculum.html">Our Curriculum</a></li>
                                         <li><a href="eyfs.html">EYFS</a></li>
                                         <li><a href="primary.html">Primary</a></li>
                                         <li><a href="secondary.html">Secondary</a></li>
@@ -87,7 +87,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <!--                            <li><a href="gallery.html">School Life</a></li>-->
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">School Life</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="icons.html">Calendar</a></li>
+                                        <li><a href="calendar.html">Calendar</a></li>
                                         <li><a href="times.html">Times of the Day</a></li>
                                         <li><a href="lunches.html">Lunches & Snack</a></li>
                                         <li><a href="houses.html">House System</a></li>
@@ -102,7 +102,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span data-letters="Pages">Admissions</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="admissions.html">Admissions Procedures</a></li>
-                                        <li><a href="icons.html">Tuiton Fees</a></li>
+                                        <li><a href="tuition.html">Tuiton Fees</a></li>
                                     </ul>
                                 </li>
 
@@ -161,7 +161,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="footer-agileinfo">
                 <div class="col-md-10 col-sm-6 footer-grid">
                     <h3>Location</h3>
-                    <p>Jl Watagude, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
+                    <p>Jl Watugede, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
                 </div>
                 <!--
 				<div class="col-md-5 col-sm-6 footer-grid footer-tags">
@@ -174,7 +174,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-md-2 col-sm-6 footer-grid w3social">
                     <h3>Media</h3>
                     <ul>
-                        <li><a href="#"><i class="fa fa-facebook"></i>Facebook</a></li>
+                        <li><a href="https://www.facebook.com/Jogjakarta-Community-School-395131763855494"><i class="fa fa-facebook"></i>Facebook</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"> </div>
