--- a/bahasaIndonesia.html
+++ b/bahasaIndonesia.html
@@ -65,43 +65,44 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span data-letters="Pages">About</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="welcome.html">Welcome</a></li>
-                                        <li><a href="codes.html">Vision and Mission</a></li>
-                                        <li><a href="codes.html">Governance</a></li>
-                                        <li><a href="codes.html">PTA</a></li>
+                                        <li><a href="vision.html">Vision and Mission</a></li>
+                                        <li><a href="governance.html">Governance</a></li>
+                                        <li><a href="pta.html">PTA</a></li>
                                         <li><a href="enviromental_mindfulness.html">Eco Awareness</a></li>
-                                        <li><a href="codes.html">Recruitment</a></li>
+                                        <li><a href="recruitment.html">Recruitment</a></li>
                                     </ul>
                                 </li>
                                 <!--							<li><a href="about.html">Curriculum</a></li> -->
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">Curriculum</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="icons.html">Our Curriculum</a></li>
-                                        <li><a href="codes.html">EYFS</a></li>
-                                        <li><a href="codes.html">Primary</a></li>
-                                        <li><a href="codes.html">Secondary</a></li>
-                                        <li><a href="codes.html">Bahasa Indonesia</a></li>
-                                        <li><a href="codes.html">Pastoral Care</a></li>
+                                        <li><a href="curriculum.html">Our Curriculum</a></li>
+                                        <li><a href="eyfs.html">EYFS</a></li>
+                                        <li><a href="primary.html">Primary</a></li>
+                                        <li><a href="secondary.html">Secondary</a></li>
+                                        <li><a href="bahasaIndonesia.html">Bahasa Indonesia</a></li>
+                                        <li><a href="pastoral.html">Pastoral Care</a></li>
                                     </ul>
                                 </li>
 
                                 <!--                            <li><a href="gallery.html">School Life</a></li>-->
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">School Life</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="icons.html">Calendar</a></li>
-                                        <li><a href="codes.html">Times of the Day</a></li>
-                                        <li><a href="codes.html">Lunches & Snackes</a></li>
-                                        <li><a href="codes.html">House System</a></li>
-                                        <li><a href="codes.html">Merits and Dojos</a></li>
-                                        <li><a href="codes.html">After School Activities</a></li>
-                                        <li><a href="codes.html">Special Events</a></li>
-                                        <li><a href="codes.html">Uniform</a></li>
+                                        <li><a href="calendar.html">Calendar</a></li>
+                                        <li><a href="times.html">Times of the Day</a></li>
+                                        <li><a href="lunches.html">Lunches & Snack</a></li>
+                                        <li><a href="houses.html">House System</a></li>
+                                        <li><a href="merits.html">Merits and Dojos</a></li>
+                                        <li><a href="asa.html">After School Activities</a></li>
+                                        <li><a href="events.html">Special Events</a></li>
+                                        <li><a href="uniform.html">Uniform</a></li>
                                     </ul>
                                 </li>
 
 
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span data-letters="Pages">Admissions</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="icons.html">Admissions</a></li>
+                                        <li><a href="admissions.html">Admissions Procedures</a></li>
+                                        <li><a href="tuition.html">Tuiton Fees</a></li>
                                     </ul>
                                 </li>
 
@@ -125,16 +126,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="w3ls_single_left_grid">
                     <div class="clearfix"> </div>
                 </div>
-                <div class="w3ls_single_left_grid1">
+                <div class="center">
                     <img src="images/david.jpg" alt=" " class="center" />
-                    <p>
-                        <span><strong>Indonesian language</strong></span> The benefits of an international education are well documented. Our curriculum is taught in English and the subjects our children follow lead to internationally recognised standards. JCS is a community school and firmly rooted in Jogjakarta. As such, we also want our children to celebrate the Indonesian language and culture.
-                        <br><br> Here at JCS we offer all our students the opportunity to learn Indonesian as taught by our team teachers whose first language is Indonesian. They tailor lessons to suit the levels of ability within the classroom. The teaching of Indonesian begins in our Primary phase and continues throughout the student’s time at school. Our older students are able to sit the Cambridge examinations in either First or Second Language Indonesian.
+                    <br>
+                    <h3>Indonesian language</h3> <br>The benefits of an international education are well documented. Our curriculum is taught in English and the subjects our children follow lead to internationally recognised standards. JCS is a community school and firmly rooted in Jogjakarta. As such, we also want our children to celebrate the Indonesian language and culture.
+                    <br><br> Here at JCS we offer all our students the opportunity to learn Indonesian as taught by our team teachers whose first language is Indonesian. They tailor lessons to suit the levels of ability within the classroom. The teaching of Indonesian begins in our Primary phase and continues throughout the student’s time at school. Our older students are able to sit the Cambridge examinations in either First or Second Language Indonesian.
 
-                        <br><br> On top of our our language programme we promote Indonesian manners and traditions and explore local crafts and customs. One of our annual events is our Indonesia Week where children learn styles of art, study house building, craft work, local history and learn traditional songs and dance.
-                        <br><br> Developing an understanding of the Indonesian culture and language alongside the British curriculum means students will gain an international education without foregoing an appreciation of local history, community and society. Speaking more than one language and the experience of living in a multicultural environment teaches us adaptability, tolerance and appreciation which are the benchmark of the new global citizen.
+                    <br><br> On top of our our language programme we promote Indonesian manners and traditions and explore local crafts and customs. One of our annual events is our Indonesia Week where children learn styles of art, study house building, craft work, local history and learn traditional songs and dance.
+                    <br><br> Developing an understanding of the Indonesian culture and language alongside the British curriculum means students will gain an international education without foregoing an appreciation of local history, community and society. Speaking more than one language and the experience of living in a multicultural environment teaches us adaptability, tolerance and appreciation which are the benchmark of the new global citizen.
 
-                    </p>
                     <div class="clearfix "> </div>
                 </div>
             </div>
@@ -145,28 +145,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </div>
     <!-- //single -->
     <!-- footer -->
-    <div class="footer w3layouts ">
-        <div class="container ">
-            <div class="footer-agileinfo ">
-                <div class="col-md-10 col-sm-6 footer-grid ">
+    <div class="footer w3layouts">
+        <div class="container">
+            <div class="footer-agileinfo">
+                <div class="col-md-10 col-sm-6 footer-grid">
                     <h3>Location</h3>
-                    <p>Jl Watagude, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
+                    <p>Jl Watugede, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
                 </div>
-                <!--
-				<div class="col-md-5 col-sm-6 footer-grid footer-tags ">
-					<h3>Navigation</h3>
-					<ul>
-						<li><a href="contact.html "><i class="fa fa-angle-right "></i> Contact Us</a></li>
-					</ul>
-				</div>
--->
-                <div class="col-md-2 col-sm-6 footer-grid w3social ">
+                <div class="col-md-2 col-sm-6 footer-grid w3social">
                     <h3>Media</h3>
                     <ul>
-                        <li><a href="# "><i class="fa fa-facebook "></i>Facebook</a></li>
+                        <li><a href="https://www.facebook.com/Jogjakarta-Community-School-395131763855494"><i class="fa fa-facebook"></i>Facebook</a></li>
                     </ul>
                 </div>
-                <div class="clearfix "> </div>
+                <div class="clearfix"> </div>
             </div>
         </div>
     </div>
