--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <!--							<li><a href="about.html">Curriculum</a></li> -->
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">Curriculum</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="icons.html">Our Curriculum</a></li>
+                                        <li><a href="curriculum.html">Our Curriculum</a></li>
                                         <li><a href="eyfs.html">EYFS</a></li>
                                         <li><a href="primary.html">Primary</a></li>
                                         <li><a href="secondary.html">Secondary</a></li>
@@ -203,14 +203,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <h3>Location</h3>
                     <p>Jl Watugede, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
                 </div>
-                <!--
-				<div class="col-md-5 col-sm-6 footer-grid footer-tags">
-					<h3>Navigation</h3>
-					<ul>
-						<li><a href="contact.html"><i class="fa fa-angle-right"></i> Contact Us</a></li>
-					</ul>
-				</div>
--->
                 <div class="col-md-2 col-sm-6 footer-grid w3social">
                     <h3>Media</h3>
                     <ul>
