Fixed mail and phone

--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                     <div class="col-xs-9 features-w3lright">
                         <h4>CONTACT</h4>
-                        <p>+01 111 222 3333</p>
+                        <p>0811 2576 6164</p>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
@@ -186,7 +186,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                     <div class="col-xs-9 features-w3lright">
                         <h4>EMAIL</h4>
-                        <p><a href="mailto:info@example.com"> jogjakartacommunity@gmail.com</a></p>
+                        <p><a href="mailto:info@example.com"> info@jogjacommunityschool.org</a></p>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
