--- a/tuition.html
+++ b/tuition.html
@@ -130,10 +130,39 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <img src="images/calendar.jpg" alt=" " class="center" />
                     <p>
                         <div class="center">
-                            <h3>Tuiton Fees.
+                            <h3>JCS Fee Schedule 2018-2019
                             </h3>
                             <br>
-                            <br> Currently we are updating this page. <br><br> In the mean time please contact JCS through our Contact Us form or directly at the school for an updated Tuiton fee breakdown.
+                                    <img src="images/table_1_fee.png" alt=" " class="center" />
+                            <br>
+                            <h4> Option A: Lump sum payment </h4>
+                            <br>
+        <img src="images/table_2_fee.png" alt=" " class="center" />
+
+                            <br> 
+                            <ul>
+                                <li>The due date for lump sum payment is August 20th 2018</li>
+                                <li>*Lump sum payment before July 31st 2018 qualifies for a 2.5% discount</li>
+                            </ul>
+
+                            <br>
+                            <h4> Option B: Instalment payment (note: Instalment payment incurs 5% interest) </h4>
+                            <br>
+        <img src="images/table_3_fee.png" alt=" " class="center" />
+                 <br>
+                 All amounts above are denoted in Indonesian Rupiah to comply with comply with Regulation UU No 7 Year 2011.
+Parents will be invoiced in IDR and the school will accept payment in IDR.
+<br><br>
+<strong>Note:</strong><br><br>
+
+        <ul>
+                                <li>Forsecurity reasonsthe school does not accept paymentin cash.</li>
+                                <li>Families with more than2 children enrolled at JCS qualify fora discount of 6%on the tuitionof the 3rdchild
+                                    and 10% on the tuition ofthe 4th child.</li>
+                                <li>Late payment lumpsum or instalment ̶ please refer to the Parent and Student Handbook or the
+                                Admissions Policy.</li>
+                            </ul>
+
                         </div>
                     </p>
                     <div class="clearfix"> </div>
