--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                         <li><a href="eyfs.html">EYFS</a></li>
                                         <li><a href="primary.html">Primary</a></li>
                                         <li><a href="secondary.html">Secondary</a></li>
-                                        <li><a href="bahasaIndonesia.html">Bahasa Indonesia</a></li>
+                                        <li><a href="bahasaIndonesia.html">Indonesian Language</a></li>
                                         <li><a href="pastoral.html">Pastoral Care</a></li>
                                     </ul>
                                 </li>
@@ -143,7 +143,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     <!--    SliDER-->
     <div class="bxslider">
-        <div><img src="images/rolling/1_web.jpg" title="Playing outdoors"></div>
         <div><img src="images/rolling/2_web.jpg" title="Summer carnival"></div>
         <div><img src="images/rolling/3_web.jpg" title="Learning stations"></div>
         <div><img src="images/rolling/4_web.JPG" title="Playing outdoors"></div>
@@ -190,7 +189,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- services -->
     <div class="services">
         <div class="container">
-            <h3 class="w3ls-title">Our Services</h3>
+            <h3 class="w3ls-title">Our Programmes of Study</h3>
             <div class="services-agileinfo">
                 <div class="col-md-4 col-sm-4 col-xs-8 services-w3lsgrids">
                     <div class="services-w3text">
