--- a/vision.html
+++ b/vision.html
@@ -127,33 +127,26 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
+                         <div class="center">
                     <img src="images/circles/Primary.jpg" alt=" " class="img-responsive" />
-                    <p>
-                        <span><strong>JCS - Our Vision and Our Mission</strong></span>
+                    <br><br>
+                        <strong>JCS - Vision and Our Mission</strong><br><br>At JCS we have a strong vision for the school, its students, parents and staff. This is supported by our mission statement and core values which form the very heart of our community.
+                        <br><br>
+                        <strong>Our Vision </strong><br><br>
+                        To provide a vibrant learning community that draws on quality international and local resources to promote a positive approach to lifelong learning, encouraging children to embrace new experiences and develop their potential based on our core values.
 
-                        <span>At JCS we have a strong vision for the school, its students, parents and staff. This is supported by our mission statement and core values which form the very heart of our community.
-                        </span>
-
-                        <span><strong>Our Vision </strong></span>
-                        <span> To provide a vibrant learning community that draws on quality international and local resources to promote a positive approach to lifelong learning, encouraging children to embrace new experiences and develop their potential based on our core values.
-                        </span>
-
-                        <span><strong>Our Mission</strong></span>
-
-                    </p>
-                    <ul>
-                        <li>Provide a high quality international education to meet the needs of all students in a supportive environment</li>
-                        <li>Equip students for further study and career pathways</li>
-                        <li>Foster social responsibility and global awareness of students</li>
-                        <li>Engage with and become part of the local community</li>
-                    </ul>
-                    <p>
-                        <strong>Our Core Values </strong>
-                    </p>
-                    <p>
+                       <br><br><strong>Our Mission</strong>
+                            <ul>
+                                <li>Provide a high quality international education to meet the needs of all students in a supportive environment</li>
+                                <li>Equip students for further study and career pathways</li>
+                                <li>Foster social responsibility and global awareness of students</li>
+                                <li>Engage with and become part of the local community</li>
+                            </ul>
+                        <br>
+                        <strong>Our Core Values </strong><br>
+                        <br>
                         At JCS we hold dear our core values and these form the basis for how the school operates:
-                    </p>
-                    <span>
+                        <br>
                             <ul>
                                 <li>Demonstrate respect in all matters</li>
                                 <li>Promote and learn from diversity within the school, including a commitment to anti-discrimination of all kinds</li>
@@ -163,10 +156,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <li>Promote social responsibility in all our activities</li>
                                 <li>Work in partnership with the parent, local and regional community</li>
                             </ul>
-                        </span>
+
                     <br>
                     <img src="images/Mission%202.jpg" alt=" " class="img-responsive" />
-
+                </div>
                     <div class="clearfix"> </div>
                 </div>
             </div>
@@ -184,14 +177,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <h3>Location</h3>
                     <p>Jl Watugede, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
                 </div>
-                <!--
-				<div class="col-md-5 col-sm-6 footer-grid footer-tags">
-					<h3>Navigation</h3>
-					<ul>
-						<li><a href="contact.html"><i class="fa fa-angle-right"></i> Contact Us</a></li>
-					</ul>
-				</div>
--->
                 <div class="col-md-2 col-sm-6 footer-grid w3social">
                     <h3>Media</h3>
                     <ul>
